fix scrollbar themeing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,7 +121,11 @@
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--muted-foreground) var(--background);
+}
+.dark {
+  * {
+    scrollbar-color: var(--ring) transparent;
+  }
 }
 
 @layer base {
